Updating the info index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="exp-content-head">Unhack Lassonde Hackathon</div>
                         <div class="exp-loctim">
                             <div class="exp-loc">York University  </div>
-                            <div class="exp-tim">Nov 2024 - present</div>
+                            <div class="exp-tim">Nov 2024</div>
                         </div>
 
                       </div>
