--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
             <div class="past">
                 <h1 class="exp-heading hidden-right">Experience</h1>
                 <div class="exp">
+
+                    <div class="exp-content hidden-right">
+                        <div class="exp-content-head">Research Assistant</div>
+                        <div class="exp-loctim">
+                            <div class="exp-loc">York University</div>
+                            <div class="exp-tim">May 2025 - present</div>
+                        </div>
+
+                    </div>
                       
                       <div class="exp-content hidden-right">
                         <div class="exp-content-head">
@@ -76,22 +85,8 @@
 
                       </div>
 
-                      <div class="exp-content hidden-right">
-                        <div class="exp-content-head">Unhack Lassonde Hackathon</div>
-                        <div class="exp-loctim">
-                            <div class="exp-loc">York University  </div>
-                            <div class="exp-tim">Nov 2024</div>
-                        </div>
 
-                      </div>
-                      <div class="exp-content hidden-right">
-                        <div class="exp-content-head">Freelance 3D Artist</div>
-                        <div class="exp-loctim">
-                            <div class="exp-loc">Manax Studios  </div>
-                            <div class="exp-tim">Mar 2022 - Oct 2024</div>
-                        </div>
 
-                      </div>
                 </div>
 
                     <h1 class="exp-heading hidden-right">Education</h1>
